--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-window": "^1.8.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
