--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
@@ -11,6 +12,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-virtualized-auto-sizer": "^1.0.4",
     "react-window": "^1.8.6",
     "web-vitals": "^1.1.0"
   },
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-beautiful-dnd-grid": "^0.1.3-alpha"
   }
 }
