--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
+    "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-virtualized-auto-sizer": "^1.0.4",
     "react-window": "^1.8.6",
