--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://IgorKob.github.io/React_Drag_and_Drop",
+  "homepage": "https://kobrynovych.github.io/React_Drag_and_Drop",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
